Fix drawer z-index, add additional font-weight for font

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,10 @@ body {
   @apply mx-auto;
 }
 
+.drawer-side {
+  @apply z-10;
+}
+
 .rounded-lg {
   border-radius: 1.625rem;
 }
